src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: src/tui/app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
› Ask Adam to do anything     
                              
  loading · 100% left
