src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: src/tui/app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask Adam to do anything                       
                                                
  loading · 100% left
