src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__tests__status_with_inline_unified_exec_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1154
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt) · 1 backgroun…
                                                
                                                
› Ask Adam to do anything                      
                                                
  loading · 100% left
